--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,15 @@
 
 header {
     display: flex;
+
 }
+
 ul {
-
-}
-ul li{
     list-style: none;
-    
 }
-
+ul li {
+     display: inline; 
+}
 ul li a{
     text-decoration: none;
 }
