--- a/styles/style.css
+++ b/styles/style.css
@@ -12,15 +12,14 @@ header {
 a {
     color: #fff;
     font-style: 20px;
-    font-family: "Fira Code";
+    font-family: "Fira Code", Arial, Helvetica, sans-serif;
     font-weight: 500;
+    text-decoration: none;
+    margin-right: 30px;
 }
 ul {
     list-style: none;
 }
 ul li {
      display: inline; 
-}
-ul li a{
-    text-decoration: none;
 }
