--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #320909;
+    background-color: #848FA5;
     border-bottom: 10px solid #000000;
     padding: 10px 20px;
 }
 .logo {
     color: #CC2A2A;
-    text-shadow: 5px 5px 0 #000000;
+    text-shadow: 3px 2px 0 #000000;
 }
 nav {
     text-align: right;
@@ -75,9 +75,3 @@ span {
     transform: scale(1.05);
 }
 
-.nome {
-    display: inline-block;
-    flex-direction: column;
-    background-color: #3A4042;
-    padding: 38px 184px;
-}
