--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ ul li {
 a {
     display: inline-flex;
     align-items: center;
+    color: #fff;
     font-family: "Fira Code", Arial, Helvetica, sans-serif;
     font-weight: 500;
     text-decoration: none;
