--- a/styles/componentes/banner.css
+++ b/styles/componentes/banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url(../../assets/img/dasdasdadsad.JPG);
+    background-image: url();
     height: 800px;
     background-size: 100%;
     background-repeat: no-repeat;
