--- a/styles/componentes/title.css
+++ b/styles/componentes/title.css
@@ -5,3 +5,10 @@
     text-shadow: 4px 4px 0 #000000;
 
 }
+
+
+.title.-second {
+    color: #fff;
+    text-shadow: none;
+    text-align: center;
+}
