--- a/styles/componentes/skill-tec.css
+++ b/styles/componentes/skill-tec.css
@@ -1,5 +1,6 @@
 .skill-tec{
     display:flex;
+    align-items:center;
     font-family: 'Press Start 2P', sans-serif;
     font-size: 25px;
     color: #fff;
@@ -8,6 +9,7 @@
 
 .skill-tec .icon{
     margin-right:25px;
+    width: 90px;
 }
 
 
@@ -15,4 +17,8 @@
     display:flex;
     flex-direction:column;
     justify-content:space-around;
+}
+
+.skill-tec .title{
+    margin-bottom:10px;
 }
