--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-
+/*
 *{
     margin: 0;
     padding: 0;
@@ -32,4 +32,4 @@ ul li {
 .contatos {
     height: 783px;
     background-color: red;
-}
+}*/
