--- a/styles/componentes/main-action.css
+++ b/styles/componentes/main-action.css
@@ -1,4 +1,4 @@
-.action {
+.main-action {
     display: inline-flex;
     align-items: center;
     color: #fff;
@@ -7,7 +7,7 @@
     text-decoration: none;
     margin-right: 30px;
 }
-.action::before {/*é um pseudo elemento por isso os dois pontos :: */
+.main-action::before {/*é um pseudo elemento por isso os dois pontos :: */
     content: " ";/*É obrigatorio porque tudo precissa de conteudo */
     display: inline-block;
     background-color: #CC2A2A;
@@ -18,6 +18,6 @@
     vertical-align: middle;*/
 }
 
-.action:hover {
+.main-action:hover {
     color: #BFD1E5;
 }
