change banner for main-banner

--- a/styles/componentes/main-banner.css
+++ b/styles/componentes/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
     background-image: url();
     height: 800px;
     background-size: 100%;
@@ -9,20 +9,20 @@
 
 }
 
-.banner .wapper{
+.main-banner .wapper{
     display: flex;
     flex-direction: column;
     width: 640px;
 
 }
 
-.banner .box {
+.main-banner .box {
 
     margin-bottom: 40px;
 }
 
 
-.banner .navigation {
+.main-banner .navigation {
     display: flex;
     justify-content: space-around;
     
