--- a/styles/componentes/main-button.css
+++ b/styles/componentes/main-button.css
@@ -1,4 +1,4 @@
-.button {
+.main-button {
     display: inline-block; 
     background-color: #CC2A2A;
     box-shadow: 5px 5px 0 #000000;
@@ -10,7 +10,7 @@
     text-decoration: none;
  }
  
- .button:hover {
+ .main-button:hover {
      transform: scale(1.05);
  }
  
