--- a/styles/componentes/main-section.css
+++ b/styles/componentes/main-section.css
@@ -1,4 +1,4 @@
-.section {
+.main-section {
     background-color:rgb(196, 47, 47) ;
     padding-top: 50px;
     padding-bottom: 100px;
@@ -6,16 +6,16 @@
 }
 
 
-.section .main-title {
+.main-section .main-title {
     margin-bottom: 60px;
 }
 
-.section.-second{
+.main-section.-second{
     background-color: rgb(0, 0, 0);
 
 
 }
 
-.section.-bdFirst {
+.main-section.-bdFirst {
     border-color:#F25a70;
 }
