--- a/styles/componentes/main-section.css
+++ b/styles/componentes/main-section.css
@@ -1,5 +1,5 @@
 .main-section {
-    background-color:rgb(196, 47, 47) ;
+    background-color:#320909;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 10px solid #eee;
