--- a/styles/componentes/main-header.css
+++ b/styles/componentes/main-header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #848FA5;
+    background-color: #320909;
     border-bottom: 10px solid #000000;
     padding: 10px 20px;
 }
