--- a/styles/componentes/main-section.css
+++ b/styles/componentes/main-section.css
@@ -20,11 +20,11 @@
     border-color:#F25a70;
 }
 
-.main-section.-sobre {
+.main-section.-bdSecond {
     background: #7C5E99;
 }
 
-.main-section.-pColor{
+.main-section.-bdBlack{
     border-color:#000000;
 }
 
