--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Fira Code", Arial, Helvetica, sans-serif;
 }
-*, body,h1,h2,h3, figure{
+*, body,h1,h2,h3, figure,input{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,4 +10,8 @@ body {
 button {
     border: none;
     font-family: inherit;
+}
+
+input{
+    padding: 0;
 }
