--- a/styles/componentes/main-button.css
+++ b/styles/componentes/main-button.css
@@ -14,8 +14,9 @@
      transform: scale(1.05);
  }
 
-.main-button.-formu {
-
+.main-button.-full {
     width: 100%;
 } 
- 
+.main-button.-full:hover {
+    transform: scale(1.01);
+}
