--- a/styles/componentes/main-form.css
+++ b/styles/componentes/main-form.css
@@ -1,3 +1,13 @@
 .main-form {
-  padding:2rem;
+  padding:3.125rem 3.125rem;
+}
+.main-form .main-title {
+  margin-bottom: 2.5rem;
+}
+.main-form .main-input{
+  margin-bottom: 1.25rem;
+}
+
+.main-form .main-input.-textarea{
+  margin-bottom: 2.5rem;
 }
